--- a/app/src/main/res/layout/activity_geo.xml
+++ b/app/src/main/res/layout/activity_geo.xml
@@ -14,7 +14,8 @@ tools:context="com.jorgechuc.android.geoapp.GeoActivity"
     android:weightSum="1">
 
     <TextView
-    android:text="@string/texto_pregunta"
+    android:id="@+id/texto_pregunta"
+    android:text="@string/texto_pregunta_1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="24dp"
@@ -38,8 +39,12 @@ tools:context="com.jorgechuc.android.geoapp.GeoActivity"
             android:text="@string/texto_boton_falso"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
-
             />
     </LinearLayout>
+    <Button
+        android:id="@+id/boton_siguiente"
+        android:text="@string/texto_boton_siguiente"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
 </LinearLayout>
